# cc-fraud-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
grafana/: dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
sql/: init.sql
streaming/flink/: Dockerfile  fraud_detector.py
streaming/producer/: transaction_producer.py
